--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <p class="modern-sub" style="font-size: 1rem; opacity: 0.8;">Unravel Learning</p>
 
     <div class="auth-buttons">
-      <button class="btn btn-primary">Sign In</button>
-      <button class="btn btn-secondary">Sign Up</button>
+      <a href="signin.html"   class="btn btn-primary">Sign In</a>
+<a href="signup.html"   class="btn btn-secondary">Sign Up</a>
     </div>
   </div>
 
