--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 <p class="modern-sub" style="font-size: 1rem; opacity: 0.8;">Unravel Learning</p>
 
     <div class="auth-buttons">
-      <a href="signin.html"   class="btn btn-primary">Sign In</a>
+      <a href="signin.html"   class="btn btn-primary">Sign Up</a>
 <a href="signup.html"   class="btn btn-secondary">Sign Up</a>
     </div>
   </div>
 
   <div class="made-by">Made By: Monika Pathak</div>
 </body>
+
 </html>
