--- a/lesson-tabs.html
+++ b/lesson-tabs.html
@@ -55,7 +55,7 @@
     /* ----------  TEMPORARY KEY (while you build the worker)  ---------- */
 async function getGeminiKey() {
   // Paste your NEW Gemini key between the quotes, no spaces:
-  return 'AIzaSyDmtfdML20sw0ZHCU-aJxP7RRsAOWjbDE0';   // <-- your real key
+  return '';   // <-- your real key
 }
 
     /* ----------- 3.  ASK GEMINI (FREE) ----------- */
